tests/invalid/type/list_sort_missing_compareTo.pts
prototype Foo {
    int x;
}

function main() : void {
    list<Foo> xs = [];
    xs.sort();
}
